--- a/index.html
+++ b/index.html
@@ -2,18 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Learning to work with SASS</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet"/>
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
@@ -24,8 +17,7 @@
     <article>
       <section id="selling-points">
         <h2>
-          A preprocessor allows additional leverage over CSS by providing
-          additional syntax that delivers the following advantages:
+          A preprocessor allows additional leverage over CSS by providing additional syntax that delivers the following advantages:
         </h2>
 
         <ul>
@@ -41,10 +33,7 @@
       <section>
         <h2>Variables</h2>
         <p>
-          Think of variables as a way to store information that you want to
-          reuse throughout your stylesheet. You can store things like colors,
-          font stacks, or any CSS value you think you'll want to reuse. Sass
-          uses the $ symbol to make something a variable. Here's an example:
+          Think of variables as a way to store information that you want to reuse throughout your stylesheet. You can store things like colors, font stacks, or any CSS value you think you'll want to reuse. Sass uses the $ symbol to make something a variable. Here's an example:
         </p>
 
         <section>
