--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@ aside[role="complementary"] {
       Always code as if the guy who ends up maintaining your code will be a
       violent psychopath who knows where you live
     </p>
+    <p class="blue">
+        <a href="" alt="blue">Blue</a>
+    </p>
+    <p class="red">
+        <a href="" alt="red">Red</a>
+    </p>
 
     <footer>
       <h6>&copy; 2020 the entire open-source community</h6>
