--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <header>
       <h1>Learning to work with SASS</h1>
     </header>
+    
+    <div class="links">
+      <a href="blue.html" alt="blue">Blue</a>
+      <a href="red.html" alt="red">Red</a>
+    </div>
 
     <article>
       <section id="selling-points">
@@ -324,12 +329,7 @@ aside[role="complementary"] {
       Always code as if the guy who ends up maintaining your code will be a
       violent psychopath who knows where you live
     </p>
-    <p class="blue">
-        <a href="blue.html" alt="blue">Blue</a>
-    </p>
-    <p class="red">
-        <a href="red.html" alt="red">Red</a>
-    </p>
+
 
     <footer>
       <h6>&copy; 2020 the entire open-source community</h6>
