--- a/red.html
+++ b/red.html
@@ -14,6 +14,11 @@
       <h1>Learning to work with SASS</h1>
     </header>
 
+    <div class="links">
+      <a href="blue.html" alt="blue">Blue</a>
+      <a href="red.html" alt="red">Red</a>
+    </div>
+
     <article>
       <section id="selling-points">
         <h2>
@@ -323,12 +328,6 @@ aside[role="complementary"] {
     <p class="warning">
       Always code as if the guy who ends up maintaining your code will be a
       violent psychopath who knows where you live
-    </p>
-    <p class="blue">
-        <a href="blue.html" alt="blue">Blue</a>
-    </p>
-    <p class="red">
-        <a href="red.html" alt="red">Red</a>
     </p>
 
     <footer>
