Add home button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     
     <div class="links">
+      <a href="index.html" alt="Home">Home</a>
       <a href="blue.html" alt="blue">Blue</a>
       <a href="red.html" alt="red">Red</a>
     </div>
